add: new submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "worker/models/controlnet"]
-	path = worker/models/controlnet
-	url = https://huggingface.co/DionTimmer/controlnet_qrcode-control_v1p_sd15
-[submodule "worker/models/stable-diffusion"]
-	path = worker/models/stable-diffusion
-	url = https://huggingface.co/runwayml/stable-diffusion-v1-5
-	branch = main
+[submodule "worker/qr-ai-models"]
+	path = worker/qr-ai-models
+	url = https://gitlab.com/MrLaki5/qr-ai-models.git
